<resources>
    <string name="app_name">D2C</string>
    <string name="action_cancel">取消</string>
    <string name="action_ok">确定</string>
    <string name="action_send">发送</string>
    <string name="action_delete">删除</string>
    <string name="action_save">保存</string>
    <string name="action_submit">提交</string>
    <string name="action_give">赠送</string>
    <string name="desc_shrinkup">收起</string>
    <string name="desc_spread">展开全部</string>
    <string name="label_pay_success">支付成功</string>
    <string name="action_clear_allempty">清除失效商品</string>
    <string name="hint_msg_security">请输入验证码</string>
    <string name="global_invoice">全球购商品暂不支持开发票</string>
    <string name="global_warehouse_notice">商品总额已超过海关限额2000元(含),请选择部分商品分开下单</string>
    <string name="question_type">问题类型</string>
    <string name="function_error">功能异常</string>
    <string name="send_slow">发货太慢</string>
    <string name="product_quality">商品质量</string>
    <string name="function_new">新功能建议</string>
    <string name="buyer_count_down">试用期剩余:%1$s天%2$s时%3$s分%4$s秒</string>
    <string name="hint_explore_publish">写下购买体会和使用感受来帮助其ta小伙伴吧~</string>
    <string name="hint_over_rate">同仓库商品总额已超限,请选择部分商品分开下单</string>
    <string name="hint_over_sea_notice">*非中国大陆地区将会根据订单实际情况额外收取运费,请准确填写微信号和邮箱,以便下单后客服联系您</string>
    <string name="hint_over_sea_notices">*由于您选择的收货地址处于非中国大陆地区,我们将根据实际订单情况会要求您支付额外的运费,我们的客服专员会与您联系。</string>
    <string name="hint_question_error">不能愉快的使用现有功能?上传相关页面截图能方便我们快速解决问题哦~</string>
    <string name="hint_question_new">快把你想要的功能说出来吧~</string>
    <string name="buyer_close_notice">你的买手店已被关闭,如需重新开店请购买指定商品</string>
    <string name="hint_question_other">可填写畅所欲言的相关信息~</string>
    <string name="hint_question_price">从购买之日起至收货后7天内，如遇任何购买平台同一商品价格更低，D2C赔付差价</string>
    <string name="hint_complaint_slow">发货太慢?我要投诉！</string>
    <string name="hint_complaint_bad">商品质量差?我要投诉！</string>
    <string name="hint_complaint_attitude">客服态度差?我要投诉！</string>
    <string name="people_attitude">客服态度</string>
    <string name="equipment_notice">为保障您的账号安全,需要验证您的身份</string>
    <string name="hint_get_coupon">输入优惠券密码</string>
    <string name="hint_feed_back_name">输入您的姓名</string>
    <string name="hint_feed_back_phone">输入您的电话</string>
    <string name="hint_set_pay_password">请输入8&#8211;20位字母和数字的组合</string>
    <string name="hint_receive_name">请输入收货人姓名</string>
    <string name="hint_receive_phone">请输入收货人的手机号</string>
    <string name="hint_receive_location">请选择收货地区</string>
    <string name="hint_receive_street">请输入街道门牌</string>
    <string name="hint_alipay_account">退款仅支持退到支付宝账号</string>
    <string name="hint_alipay_name">支付宝实名认证</string>
    <string name="hint_refund_money">最多可退%s元</string>
    <string name="hint_refund_count">最多可退%s件</string>
    <string name="hint_select_exchange_logistic">选择快递公司</string>
    <string name="hint_logisitic_no">填写快递单号</string>
    <string name="hint_packet_password">请输入钱包密码</string>
    <string name="hint_msg_security2">请输入短信验证码</string>
    <string name="hint_start_live">好的标题能吸引更多用户哦~</string>
    <string name="hint_d2c_card_no">请输入D2C卡号码</string>
    <string name="hint_d2c_card_password">请输入D2C卡密码</string>
    <string name="hint_not_emoji">收货人姓名不能添加特殊字符</string>
    <string name="hint_type_invoice_top">请输入个人/单位抬头</string>
    <string name="hint_person_invoice">个人</string>
    <string name="hint_live_input">说点什么&#8230;</string>
    <string name="hint_dan_input_host">发送弹幕，免费</string>
    <string name="label_main_menu4">购物车</string>
    <string name="label_add_cart">加入购物车</string>
    <string name="label_move_collect">移入收藏</string>
    <string name="label_coupon">优惠券</string>
    <string name="label_tax">税费</string>
    <string name="label_self_buy">买手优惠</string>
    <string name="label_my_order">我的订单</string>
    <string name="label_waiting_payment">待付款</string>
    <string name="label_waiting_comment">待评价</string>
    <string name="label_focus_brand">关注品牌</string>
    <string name="label_my_big_card">我的大牌</string>
    <string name="label_top_recommend">榜单推荐</string>
    <string name="label_online">在线客服</string>
    <string name="label_telephone2">电话客服</string>
    <string name="label_password">密码</string>
    <string name="label_login">登 录</string>
    <string name="label_reset_password">忘记密码</string>
    <string name="label_loading">正在努力加载中</string>
    <string name="label_see_detial">查看详情</string>
    <string name="label_change_login_password">修改登录密码</string>
    <string name="label_relevance_account">关联账号</string>
    <string name="label_change_pay_password">修改支付密码</string>
    <string name="label_person_info">个人信息</string>
    <string name="label_account_security">账户安全</string>
    <string name="label_message_notification">消息通知</string>
    <string name="label_clear_cache">清除缓存</string>
    <string name="label_check_version">检查更新</string>
    <string name="label_certification">实名认证</string>
    <string name="label_logout">退出登录</string>
    <string name="label_msg_code">获取验证码</string>
    <string name="label_password_tip1">请将密码设为8-20位，并包含字母、数字和符号两种以上字符</string>
    <string name="label_password_tip2">密码过于简单,须包含字母,数字和符号两种以上字符!</string>
    <string name="label_verification_1">手机收不到验证码怎么?</string>
    <string name="label_verification_2">1.检查垃圾短信,在设置中,将发件人设置为白名单;</string>
    <string name="label_verification_3">2.若手机号已停用,请联系客服解决</string>
    <string name="label_bind_phone">绑定手机号</string>
    <string name="label_register_protocol">注册即代表同意</string>
    <string name="label_register_protocal_l">《D2C网络服务使用协议》</string>
    <string name="label_avatar">头像</string>
    <string name="label_nick">昵称</string>
    <string name="label_sex">性别</string>
    <string name="label_birthday">生日</string>
    <string name="label_same_interest_buy">同兴趣的人也在买</string>
    <string name="label_msg_pop_str">再也不错过物流、交易、促销等重要消息提醒~</string>
    <string name="label_confirm_receipt">确认收货</string>
    <string name="label_delete">不再使用该号码?注销账号</string>
    <string name="label_apply_after_sale">申请售后</string>
    <string name="label_order_total">商品总计</string>
    <string name="label_order_charge">订单运费</string>
    <string name="label_actual_payment">实际支付</string>
    <string name="label_price">¥%s</string>
    <string name="label_no_sign_price">%s</string>
    <string name="label_price1">%s</string>
    <string name="label_current_position">所在位置</string>
    <string name="label_crowd_timeout">还剩%1$d天%2$d%3$d时%4$d%5$d分%6$d%7$d秒</string>
    <string name="label_order1_timeout">剩余%1$d小时%2$d%3$d分%4$d%5$d秒</string>
    <string name="label_order_detail_timeout">%1$d小时%2$d%3$d分%4$d%5$d秒未支付,订单会自动关闭</string>
    <string name="label_order_timeover">*超时，订单已关闭</string>
    <string name="label_product_style">颜色：%1$s 尺码：%2$s</string>
    <string name="label_product_total">共%1$s件商品 实付￥%2$s</string>
    <string name="label_cancel_order">取消订单</string>
    <string name="label_buy_again">再次购买</string>
    <string name="label_real_name">海关要求购买跨境商品需要进行实名认证</string>
    <string name="label_over_rate_label">以下子订单的商品总额(使用优惠券,红包前)已超过国家政策规定的最高可购买限额,请您从中挑选部分商品分开下单。</string>
    <string name="label_order_id">订单编号：%s</string>
    <string name="label_order_id_simple">订单编号：%s</string>
    <string name="label_order_buyer_code">购买人：%s</string>
    <string name="label_order_payment">【%s】</string>
    <string name="label_order_total2">%1$d件 ¥%2$s</string>
    <string name="label_all_focus">%d人 关注</string>
    <string name="label_all_like">共%d用户喜欢</string>
    <string-array name="label_coupon_tabs">
        <item>待使用</item>
        <item>已使用</item>
        <item>已过期</item>
    </string-array>
    <string name="label_coupon_list">我的优惠券</string>
    <string name="label_get">兑换</string>
    <string name="label_need_amount">满%d元使用</string>
    <string name="label_need_amount1">满%s元使用</string>
    <string name="label_pozhe">%1$s&#8212;%2$s</string>
    <string-array name="label_after_sale_tabs">
        <item>退款退货申请</item>
        <item>换货申请</item>
        <item>退款申请</item>
    </string-array>
    <string name="label_sale_id">售后编号:%s</string>
    <string name="label_after_sale_payment">退款:¥%s 退回方式：原路返回</string>
    <string name="label_after_sale_payment2">退款:¥%s</string>
    <string name="label_cancel_after_sale">取消申请</string>
    <string name="label_balance">结算(%d)</string>
    <string name="label_edit_mark">点击这里，可以填写备注或留言</string>
    <string name="label_fans">粉丝</string>
    <string name="label_year_month_day">%1$s/%2$s/%3$s</string>
    <string name="label_get_code">获取验证码</string>
    <string name="label_reload_code">收不到验证码(%ss)</string>
    <string name="label_reload_security">%ss</string>
    <string name="label_country_code">选择国家和地区</string>
    <string name="label_relevance_product">关联商品(%d/9)</string>
    <string name="label_plus">+%s</string>
    <string name="label_kongge">%1$s %2$s</string>
    <string name="label_vip_center">会员中心</string>
    <string name="label_pre_clothe">预约试衣</string>
    <string name="label_report_product">商品报告</string>
    <string name="label_collage">拼团</string>
    <string name="label_enter_partner">入驻合作</string>
    <string-array name="label_category_tabs">
        <item>商品</item>
        <item>品牌</item>
    </string-array>
    <string name="label_code">验证码</string>
    <string name="label_add_focus">+关注</string>
    <string name="label_confirm_password">确认密码</string>
    <string name="label_new_password1">新密码(请输入8-20位字母和数字)</string>
    <string name="label_copyright">Powered by D2C\nCopyright(&#169;)2016 D2CMALL COM-All Rights
        Reserved
    </string>
    <string name="label_xuanhua_mail">入驻邮箱：xuanhua@d2cmall.com</string>
    <string name="label_xuanhua_phone">联系电话：</string>
    <string name="label_join_us">加入我们</string>
    <string name="label_share_friend">分享给朋友</string>
    <string name="label_scan_register">扫描左侧二维码，\n注册即送100元！</string>
    <string name="label_android_version">Android v%s</string>
    <string name="label_send_code_phone">将向您绑定的%s发送验证码</string>
    <string name="label_cant_code">短信验证码收不到?</string>
    <string name="label_try_code">收不到验证码</string>
    <string name="label_voice_code">试试语音验证码</string>
    <string name="label_show_logistical">查看物流</string>
    <string name="label_change_logistical">修改物流信息</string>
    <string name="label_write_logistical">填写物流信息</string>
    <string name="label_confirm_receive">确认收货</string>
    <string name="label_goto_comment">评价晒单</string>
    <string name="label_comment_reward">晒单+%dD币</string>
    <string name="label_discount">%s折</string>
    <string name="label_share_qq">QQ</string>
    <string name="label_share_qqzone">QQ空间</string>
    <string name="label_share_link">复制链接</string>
    <string name="label_share_weibo">新浪微博</string>
    <string name="label_share_wxzone">朋友圈</string>
    <string name="label_share_wxfriend">微信好友</string>
    <string name="label_share_poster">生成海报</string>
    <string name="label_member_share1">分享@%s的美SHOW,快来围观吧~</string>
    <string name="label_member_share_person">%s在D2C分享了很多美show，快来围观吧~</string>
    <string name="label_green_phone">400-8403666</string>
    <string name="label_message_detail">消息详情</string>
    <string name="label_rmb">¥</string>
    <string name="label_sale_out">已售罄</string>
    <string name="label_about_d2c">关于我们</string>
    <string name="label_to_like">去评分</string>
    <string name="label_show_comment">查看评价</string>
    <string name="label_show_after_sale">售后跟踪</string>
    <string name="label_valid_coupon">可用(%d)</string>
    <string name="label_unvalid_coupon">不可用(%d)</string>
    <string name="add_cart_dialog">以下商品库存不足,先将其他有货商品加入购物车吧~</string>
    <string name="let_me_think">我再想想</string>
    <string name="label_invoice">发票</string>
    <string name="label_not_need">暂不需要</string>
    <string name="label_product_product">商品</string>
    <string name="label_product_detail">详情</string>
    <string name="label_product_commend">晒单</string>
    <string name="label_product_match">搭配</string>
    <string name="label_ms_limit">*所结算商品中含秒杀商品，秒杀商品不支持优惠券</string>
</resources>