<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/invoice_layout"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@color/color_white"
    android:gravity="center_vertical"
    android:layout_marginBottom="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/label_invoice"
        android:textColor="@color/color_black87"
        android:textSize="@dimen/medium_text_size3" />

    <TextView
        android:id="@+id/tv_invoice_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="right"
        android:hint="@string/label_not_need"
        android:maxLines="1"
        android:textColor="@color/color_black38"
        android:textSize="11dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/icon_all_arrowright_big" />
</LinearLayout>