<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/product_tab_ll"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="42dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:alpha="0"
    android:background="@color/color_white"
    android:layout_below="@id/first_title_ll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/product_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/label_product_product"
            android:gravity="center"
            android:textColor="@color/color_black87"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/detail_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_product_detail"
            android:textColor="@color/color_black60"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/comment_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/label_product_commend"
            android:gravity="center"
            android:textColor="@color/color_black60"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/match_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/label_product_match"
            android:gravity="center"
            android:textColor="@color/color_black60"
            android:textSize="14dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_cursor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/transparent"
        android:scaleType="matrix" />

</LinearLayout>