<?xml version="1.0" encoding="utf-8"?>
<com.d2cmall.buyer.widget.RoundLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="296dp"
    android:layout_height="296dp"
    android:layout_centerInParent="true"
    android:background="@color/color_white"
    app:radius="2dp">

    <TextView
        android:id="@+id/tv_add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="32dp"
        android:text="@string/add_cart_dialog"
        android:textColor="@color/trans_87_color_black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_below="@id/tv_add_title"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp" />

    <LinearLayout
        android:id="@+id/ll_img"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_below="@id/tv_add_title"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" />


    <TextView
        android:id="@+id/just_dismiss"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/let_me_think"
        android:textColor="@color/trans_50_color_black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/just_go_on"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/just_dismiss"
        android:background="#ff3f4043"
        android:gravity="center"
        android:text="@string/label_add_cart"
        android:textColor="@color/trans_87_color_white"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@id/just_dismiss"
        android:background="#ffe8e8e8" />


</com.d2cmall.buyer.widget.RoundLayout>